--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.19.2",
+        "node-schedule": "^2.1.1",
         "nodemon": "^3.1.3",
         "socket.io": "^4.7.5",
         "ws": "^8.17.0"
