--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,8 +11,11 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.19.2",
+        "mysql2": "^3.10.1",
         "node-schedule": "^2.1.1",
         "nodemon": "^3.1.3",
+        "sequelize": "^6.37.3",
+        "sequelize-cli": "^6.6.2",
         "socket.io": "^4.7.5",
         "ws": "^8.17.0"
     }
